--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -17,7 +17,7 @@
 /*** WSXGA (Wide Super Extended Graphics Array) resolution ***/
 .sidebar {
   background-image: url(../images/side_bar_img.png);
-  background-color: #0096df;
+  background-color: #051a53;
   background-size: cover;
   background-repeat: no-repeat;
   width: 308px;
