--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,12 +1,5 @@
-
-$primaryFont:"Outfit", sans-serif;
-$primaryBgColor:#2CA0DA;
-$primaryColor:#0096DF;
-$dashbordBlkBg:#D8E1ED;
-$white:#fff;
-
-
-
-
-
-
+$primaryFont: "Outfit", sans-serif;
+$primaryBgColor: #051a53;
+$primaryColor: #051a53;
+$dashbordBlkBg: #D8E1ED;
+$white: #fff;
