--- a/src/assets/scss/messages.scss
+++ b/src/assets/scss/messages.scss
@@ -577,7 +577,7 @@
                         justify-content: end;
                         align-items: end;
                         .txt {
-                            background: #0096df;
+                            background: #051a53;
                             color: #fff;
                         }
                     }
