--- a/src/assets/scss/profile.scss
+++ b/src/assets/scss/profile.scss
@@ -570,7 +570,7 @@
                         margin-right: 9px;
                     }
                     &.btn-submit {
-                        background: linear-gradient(90deg, #2CA0DA 0%, #3982A7 100%);
+                        background: linear-gradient(90deg, #051a53 0%, #3982A7 100%);
                         color: $white;
                         margin-right: 0px;
                     }
