--- a/src/assets/scss/settings.scss
+++ b/src/assets/scss/settings.scss
@@ -51,7 +51,7 @@
         }
         span {
             font-size: 18px;
-            color: #0096df;
+            color: #051a53;
             font-weight: 500;
             @media ($sm-1679) {
                 font-size: 16px;
