--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+
 /*** all Mobile Screen (iphone 6,7,8) ***/
 /*** mobile Landscape Size ***/
 /*** medium devices (tablets, less than 992px) ***/
@@ -18,8 +19,9 @@
 .dashboard-outer {
   display: flex;
   align-items: stretch;
-  background-color: #2CA0DA;
+  background-color: #051a53;
 }
+
 .dashboard-outer .right-pannel {
   flex: 1;
   width: calc(100% - 323px);
@@ -30,44 +32,52 @@
   display: flex;
   flex-direction: column;
 }
+
 @media (max-width: 1679px) {
   .dashboard-outer .right-pannel {
     width: calc(100% - 280px);
     margin-left: 280px;
   }
 }
+
 @media (max-width: 1481px) {
   .dashboard-outer .right-pannel {
     width: calc(100% - 200px);
     margin-left: 200px;
   }
 }
+
 @media (max-width: 1199px) {
   .dashboard-outer .right-pannel {
     width: calc(100% - 180px);
     margin-left: 180px;
   }
 }
+
 @media (max-width: 579px) {
   .dashboard-outer .right-pannel {
     width: calc(100% - 50px);
     margin-left: 50px;
   }
 }
+
 .dashboard-outer .right-pannel .cta-info-blk {
   display: flex;
   flex-wrap: wrap;
   padding: 26px 25px 0;
 }
+
 @media (max-width: 1679px) {
   .dashboard-outer .right-pannel .cta-info-blk {
     padding: 20px 25px 0;
   }
 }
+
 .dashboard-outer .right-pannel .cta-info-blk .board-info {
   display: flex;
   align-items: center;
 }
+
 .dashboard-outer .right-pannel .cta-info-blk .board-info .icon-blk {
   width: 47px;
   height: 47px;
@@ -78,11 +88,13 @@
   justify-content: center;
   margin-right: 16px;
 }
+
 .dashboard-outer .right-pannel .cta-info-blk .board-info .txt {
   font-weight: 500;
-  color: #0096DF;
+  color: #051a53;
   font-size: 23px;
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer {
   display: flex;
   flex-wrap: wrap;
@@ -92,6 +104,7 @@
   overflow-y: auto;
   flex-grow: 1;
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp {
   display: flex;
   flex-wrap: wrap;
@@ -99,12 +112,14 @@
   width: 100%;
   margin-right: 26px;
 }
+
 @media (max-width: 1679px) {
   .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp {
     max-width: 48%;
     margin-right: 18px;
   }
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk {
   border-radius: 24px;
   background: url("../img/greetings-dashboard.png") no-repeat;
@@ -118,59 +133,70 @@
   justify-content: center;
   color: #fff;
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk .greetings-title {
   font-size: 30px;
   font-weight: 600;
   margin-bottom: 23px;
 }
+
 @media (max-width: 1679px) {
   .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk .greetings-title {
     font-size: 26px;
     margin-bottom: 20px;
   }
 }
+
 @media (max-width: 1441px) {
   .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk .greetings-title {
     font-size: 24px;
     margin-bottom: 15px;
   }
 }
+
 @media (max-width: 1199px) {
   .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk .greetings-title {
     font-size: 22px;
     margin-bottom: 10px;
   }
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk .greetings-txt {
   font-size: 18px;
   font-weight: 300;
 }
+
 @media (max-width: 1679px) {
   .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk .greetings-txt {
     font-size: 17px;
   }
 }
+
 @media (max-width: 1441px) {
   .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk .greetings-txt {
     font-size: 16px;
   }
 }
+
 @media (max-width: 1199px) {
   .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk .greetings-txt {
     font-size: 15px;
   }
 }
+
 @media (max-width: 991px) {
   .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk .greetings-txt {
     font-size: 14px;
   }
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp {
   display: flex;
   flex-wrap: wrap;
   flex: 1;
   height: 282px;
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk {
   width: calc(50% - 14px);
   border-radius: 17px;
@@ -181,11 +207,13 @@
   height: 133px;
   align-items: center;
 }
+
 @media (max-width: 1679px) {
   .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk {
     padding: 24px;
   }
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk .icon-blk {
   width: 74px;
   height: 74px;
@@ -197,6 +225,7 @@
   align-items: center;
   justify-content: center;
 }
+
 @media (max-width: 1679px) {
   .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk .icon-blk {
     width: 64px;
@@ -204,42 +233,50 @@
     margin-right: 20px;
   }
 }
+
 @media (max-width: 1441px) {
   .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk .icon-blk {
     width: 54px;
     height: 54px;
   }
 }
+
 @media (max-width: 1199px) {
   .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk .icon-blk {
     width: 44px;
     height: 44px;
   }
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk .icon-blk img {
   max-width: 31px;
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk .dtl-blk {
   display: flex;
   flex: 1;
   flex-direction: column;
-  color: #0096DF;
+  color: #051a53;
   justify-content: center;
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk .dtl-blk .info {
   font-size: 18px;
   margin-bottom: 10px;
 }
+
 @media (max-width: 1679px) {
   .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk .dtl-blk .info {
     font-size: 16px;
   }
 }
+
 .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk .dtl-blk .count {
   font-weight: 600;
   font-size: 26px;
   line-height: 1;
 }
+
 @media (max-width: 1679px) {
   .dashboard-outer .right-pannel .content-wrp-outer .count-blks-wrp .count-blk .dtl-blk .count {
     font-size: 24px;
