--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+
 /*** all Mobile Screen (iphone 6,7,8) ***/
 /*** mobile Landscape Size ***/
 /*** medium devices (tablets, less than 992px) ***/
@@ -23,31 +24,38 @@
   padding: 0px 20px 0px 49px;
   border-radius: 40px 0 0 0;
 }
+
 @media (max-width: 1679px) {
   .header .header-inner {
     padding: 0px 15px 0px 40px;
   }
 }
+
 .header .header-inner .user-details {
   display: flex;
   align-items: center;
 }
+
 .header .header-inner .user-details .user-drop {
   padding: 20px 20px;
 }
+
 @media (max-width: 1679px) {
   .header .header-inner .user-details .user-drop {
     padding: 15px 15px;
   }
 }
+
 @media (max-width: 991px) {
   .header .header-inner .user-details .user-drop {
     padding: 10px;
   }
 }
+
 .header .header-inner .user-details .user-drop .name {
   display: none;
 }
+
 .header .header-inner .user-details .user-name {
   display: flex;
   align-items: center;
@@ -55,18 +63,21 @@
   font-size: 15px;
   line-height: 100%;
   letter-spacing: 0px;
-  color: #0096DF;
+  color: #051a53;
 }
+
 @media (max-width: 1679px) {
   .header .header-inner .user-details .user-name {
     font-size: 14px;
   }
 }
+
 @media (max-width: 1481px) {
   .header .header-inner .user-details .user-name {
     font-size: 13px;
   }
 }
+
 .header .header-inner .user-details .user-image {
   width: 48px;
   height: 48px;
@@ -74,25 +85,29 @@
   border-radius: 48px;
   margin-right: 7px;
 }
+
 @media (max-width: 1679px) {
   .header .header-inner .user-details .user-image {
     width: 40px;
     height: 40px;
   }
 }
+
 @media (max-width: 1199px) {
   .header .header-inner .user-details .user-image {
     width: 35px;
     height: 35px;
   }
 }
+
 .header .header-inner .user-details .user-image img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 50px;
 }
+
 .header .header-inner .user-details .notification {
   padding: 0px 14px;
   position: relative;
@@ -104,6 +119,7 @@
   align-items: center;
   justify-content: center;
 }
+
 @media (max-width: 1679px) {
   .header .header-inner .user-details .notification {
     width: 40px;
@@ -111,12 +127,14 @@
     padding: 0px 12px;
   }
 }
+
 @media (max-width: 1199px) {
   .header .header-inner .user-details .notification {
     width: 35px;
     height: 35px;
   }
 }
+
 .header .header-inner .user-details .notification .no-of-notification {
   position: absolute;
   font-weight: 600;
@@ -134,6 +152,7 @@
   top: -9px;
   right: 2px;
 }
+
 @media (max-width: 1679px) {
   .header .header-inner .user-details .notification .no-of-notification {
     font-size: 14px;
@@ -142,6 +161,7 @@
     top: -6px;
   }
 }
+
 @media (max-width: 1481px) {
   .header .header-inner .user-details .notification .no-of-notification {
     font-size: 13px;
