--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -13,7 +13,7 @@
     left: 0;
     top: 0;
     transition: width 0.3s ease-in-out;
-    background-color: #2CA0DA;
+    background-color: #051a53;
     z-index: 2;
     @media ($sm-1679){
         width: 280px;
