--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -189,7 +189,7 @@
 
                 .greetings-blk {
                     border-radius: 24px;
-                    background: url('../images/greetings-dashboard.png') no-repeat;
+                    background: url('../images/Pass.png') no-repeat;
                     background-position: right bottom;
                     background-size: cover;
                     // height: 282px;
