--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -122,7 +122,7 @@
 
 .dashboard-outer .right-pannel .content-wrp-outer .panel-wrp .greetings-blk {
   border-radius: 24px;
-  background: url("../img/greetings-dashboard.png") no-repeat;
+  background: url("../images/Pass.png") no-repeat;
   background-position: right bottom;
   background-size: cover;
   height: 282px;
