--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -20,7 +20,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background-color: #c0d5ee;
+  background-color: #E6EEF8;
   padding: 0px 20px 0px 49px;
   border-radius: 40px 0 0 0;
 }
