--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,277 +1,348 @@
-
 @import 'partials';
-body{
+
+body {
     font-family: $primaryFont;
     font-size: 16px;
     font-weight: 400;
+
     &::-webkit-scrollbar {
         width: 4px;
         height: 4px;
     }
+
     &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 4px #D9D9D9;
+        box-shadow: inset 0 0 4px #D9D9D9;
     }
+
     &::-webkit-scrollbar-thumb {
-    background-color: #91ADBB;
-    outline: 1px solid #D9D9D9;
+        background-color: #91ADBB;
+        outline: 1px solid #D9D9D9;
     }
 }
-*{
+
+* {
     ::-webkit-scrollbar {
         width: 4px;
         height: 4px;
     }
+
     ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 4px #D9D9D9;
+        box-shadow: inset 0 0 4px #D9D9D9;
     }
+
     ::-webkit-scrollbar-thumb {
-    background-color: #91ADBB;
-    outline: 1px solid #D9D9D9;
+        background-color: #91ADBB;
+        outline: 1px solid #D9D9D9;
     }
 }
-a{
+
+a {
     text-decoration: none;
 }
 
-.title{
+.title {
     font-size: 36px;
     font-weight: 600;
     color: #1E1E1E;
-    @media ($sm-1679){
+
+    @media ($sm-1679) {
         font-size: 34px;
     }
-    @media ($sm-1441){
+
+    @media ($sm-1441) {
         font-size: 32px;
     }
-    @media ($sm-1199){
+
+    @media ($sm-1199) {
         font-size: 30px;
     }
-    @media ($sm-991){
+
+    @media ($sm-991) {
         font-size: 28px;
     }
-    @media ($sm-767){
+
+    @media ($sm-767) {
         font-size: 26px;
     }
 }
-.table-wrap{
+
+.table-wrap {
     border: 1px solid #4B164C1A;
     border-radius: 20px 20px 0 0;
 }
-.table{
+
+.table {
     table-layout: auto;
     width: 100%;
-    tr{
-        &:last-child{
-            td{
+
+    tr {
+        &:last-child {
+            td {
                 border: none;
             }
         }
     }
-    th{
-        background-color: #D7EAF3;
+
+    th {
+        background-color: #E6EEF8;
         font-size: 16px;
         font-weight: 500;
         color: $primaryColor;
         padding: 32px 18px;
         vertical-align: middle;
-        @media ($sm-1679){
+
+        @media ($sm-1679) {
             padding: 20px 18px;
             font-size: 15px;
         }
-        @media ($sm-1199){
+
+        @media ($sm-1199) {
             padding: 17px 14px;
             font-size: 14px;
         }
-        @media ($sm-991){
+
+        @media ($sm-991) {
             padding: 15px 10px;
         }
-        &:first-child{
+
+        &:first-child {
             border-top-left-radius: 20px;
             padding-left: 36px;
-            @media ($sm-1679){
+
+            @media ($sm-1679) {
                 padding-left: 30px;
             }
-            @media ($sm-1441){
+
+            @media ($sm-1441) {
                 padding-left: 25px;
             }
-            @media ($sm-1199){
+
+            @media ($sm-1199) {
                 padding-left: 20px;
             }
-            @media ($sm-991){
+
+            @media ($sm-991) {
                 padding-left: 15px;
             }
         }
-        &:last-child{
+
+        &:last-child {
             border-top-right-radius: 20px;
             padding-right: 36px;
-            @media ($sm-1679){
+
+            @media ($sm-1679) {
                 padding-right: 30px;
             }
-            @media ($sm-1441){
+
+            @media ($sm-1441) {
                 padding-right: 25px;
             }
-            @media ($sm-1199){
+
+            @media ($sm-1199) {
                 padding-right: 20px;
             }
-            @media ($sm-991){
+
+            @media ($sm-991) {
                 padding-right: 15px;
             }
         }
-        &.th-date{
+
+        &.th-date {
             min-width: 165px;
         }
-        &.th-tag{
+
+        &.th-tag {
             min-width: 160px;
         }
-        &.th-agency{
+
+        &.th-agency {
             min-width: 100px;
         }
-        &.th-id{
+
+        &.th-id {
             min-width: 110px;
         }
-        &.th-time{
+
+        &.th-time {
             min-width: 115px;
         }
-        &.th-amount{
+
+        &.th-amount {
             min-width: 120px;
         }
     }
-    td{
+
+    td {
         color: #216A8D;
         font-size: 16px;
         padding: 32px 18px;
         border-bottom: 1px solid #4B164C1A;
         white-space: nowrap;
-        @media ($sm-1679){
+
+        @media ($sm-1679) {
             padding: 20px 18px;
             font-size: 15px;
         }
-        @media ($sm-1199){
+
+        @media ($sm-1199) {
             padding: 17px 14px;
             font-size: 14px;
         }
-        @media ($sm-991){
+
+        @media ($sm-991) {
             padding: 15px 10px;
         }
-        &:first-child{
+
+        &:first-child {
             padding-left: 36px;
-            @media ($sm-1679){
+
+            @media ($sm-1679) {
                 padding-left: 30px;
             }
-            @media ($sm-1441){
+
+            @media ($sm-1441) {
                 padding-left: 25px;
             }
-            @media ($sm-1199){
+
+            @media ($sm-1199) {
                 padding-left: 20px;
             }
         }
-        &:last-child{
+
+        &:last-child {
             padding-right: 36px;
-            @media ($sm-1679){
+
+            @media ($sm-1679) {
                 padding-right: 30px;
             }
-            @media ($sm-1441){
+
+            @media ($sm-1441) {
                 padding-right: 25px;
             }
-            @media ($sm-1199){
+
+            @media ($sm-1199) {
                 padding-right: 20px;
             }
         }
     }
 }
 
-.inner-scroll-outer{
-    &.settings{
+.inner-scroll-outer {
+    &.settings {
         overflow-y: auto;
         height: calc(100vh - 165px);
+
         @media ($sm-1679) {
             height: calc(100vh - 136px);
         }
+
         @media (max-width:650px) {
             height: calc(100vh - 160px);
         }
     }
-    &.profile{
+
+    &.profile {
         overflow-y: auto;
         max-height: calc(100vh - 164px);
+
         @media ($sm-1679) {
             max-height: calc(100vh - 135px);
         }
+
         @media ($sm-1199) {
             max-height: calc(100vh - 116px);
         }
+
         @media (max-width:650px) {
             max-height: calc(100vh - 97px);
         }
     }
-    &.add-inventory{
+
+    &.add-inventory {
         overflow-y: auto;
         max-height: calc(100vh - 164px);
+
         @media ($sm-1679) {
             max-height: calc(100vh - 135px);
         }
+
         @media ($sm-1199) {
             max-height: calc(100vh - 116px);
         }
+
         @media (max-width:650px) {
             max-height: calc(100vh - 97px);
         }
     }
 }
-.cursor-pointer{
+
+.cursor-pointer {
     cursor: pointer;
 }
 
-.req{
+.req {
     color: #dc3545 !important;
 }
 
-.no-data{
+.no-data {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
-    .no-data-content{
+
+    .no-data-content {
         display: flex;
         align-items: center;
         justify-content: center;
         max-width: 300px;
         flex-direction: column;
-        @media ($sm-991){
+
+        @media ($sm-991) {
             max-width: 190px;
         }
-        .no-data-img{
+
+        .no-data-img {
             padding: 20px;
-            img{
+
+            img {
                 display: block;
                 max-width: 100%;
             }
         }
-        .no-data-txt{
+
+        .no-data-txt {
             padding-top: 0px;
         }
     }
-    &.not-found{
+
+    &.not-found {
         height: 100vh;
-        .no-data-content{
+
+        .no-data-content {
             max-width: 380px;
-            @media ($sm-479){
+
+            @media ($sm-479) {
                 padding: 0 20px;
             }
         }
-        .no-data-txt{
+
+        .no-data-txt {
             text-align: center;
-            h2{
+
+            h2 {
                 font-size: 26px;
                 font-weight: 600;
-                @media ($sm-1679){
+
+                @media ($sm-1679) {
                     font-size: 24px;
                 }
-                @media ($sm-1441){
+
+                @media ($sm-1441) {
                     font-size: 22px;
                 }
-                @media ($sm-1199){
+
+                @media ($sm-1199) {
                     font-size: 20px;
                 }
             }
@@ -279,11 +350,12 @@ a{
     }
 }
 
-.dash-table-wrp{
+.dash-table-wrp {
     .no-data {
-        .no-data-content{
+        .no-data-content {
             max-width: 130px;
-            .no-data-txt{
+
+            .no-data-txt {
                 font-size: 14px;
             }
         }
