--- a/src/assets/scss/usermanagement.scss
+++ b/src/assets/scss/usermanagement.scss
@@ -471,7 +471,7 @@
                         border: 1px solid #051a53;
 
                         &.btn-primary {
-                            background: linear-gradient(90deg, #2ca0da 0%, #3982a7 100%);
+                            background: linear-gradient(90deg, #051a53 0%, #3982a7 100%);
                             color: #fff;
                         }
 
@@ -621,7 +621,7 @@
                 }
 
                 &.add {
-                    background: linear-gradient(90deg, #2ca0da 0%, #3982a7 100%);
+                    background: linear-gradient(90deg, #051a53 0%, #3982a7 100%);
                     border: 1px solid #051a53;
                     font-weight: 600;
                     color: #fff;
@@ -757,7 +757,7 @@
                 height: 78px;
                 // background: #d7eaf3;
                 font-size: 16px;
-                // color: #2ca0da;
+                // color: #051a53;
                 font-weight: 500;
                 padding: 10px 20px;
                 white-space: nowrap;
