--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -1,7 +1,7 @@
 @import 'partials';
 
 .sidebar {
-  
+
     width: 323px;
     max-width: 323px;
     flex: 0 0 323px;
@@ -15,25 +15,29 @@
     transition: width 0.3s ease-in-out;
     background-color: #051a53;
     z-index: 2;
-    @media ($sm-1679){
+
+    @media ($sm-1679) {
         width: 280px;
         max-width: 280px;
         flex: 0 0 280px;
     }
+
     // @media ($sm-1481){
     //     width: 250px;
     //     max-width: 250px;
     //     flex: 0 0 250px;
     // }
-    .close-nav{
+    .close-nav {
         position: absolute;
         right: -83px !important;
         display: none;
     }
-    .logo{
+
+    .logo {
         height: 62px;
-        img{
-            &.logo-collapse{
+
+        img {
+            &.logo-collapse {
                 display: none;
             }
         }
@@ -44,18 +48,23 @@
         display: flex;
         align-items: center;
         margin-bottom: 46px;
-        @media ($sm-1679){
+
+        @media ($sm-1679) {
             margin-bottom: 25px;
         }
-        @media ($sm-1199){
+
+        @media ($sm-1199) {
             margin-bottom: 20px;
         }
+
         .logo {
             max-width: 205px;
             margin: 0;
-            @media ($sm-1481){
+
+            @media ($sm-1481) {
                 max-width: 170px;
             }
+
             img {
                 width: 100%;
             }
@@ -68,143 +77,185 @@
             position: absolute;
             right: 0px;
             cursor: pointer;
-            &.close-nav{
+
+            &.close-nav {
                 bottom: 20px;
-                @media ($sm-1199){
-                    bottom:30px;
+
+                @media ($sm-1199) {
+                    bottom: 30px;
                 }
             }
-            @media ($sm-1199){
+
+            @media ($sm-1199) {
                 width: 38px;
             }
-            img{
+
+            img {
                 max-width: 100%;
             }
         }
     }
-    .menu-wrp-outer{
+
+    .menu-wrp-outer {
         height: calc(100vh - 128px);
-            &:hover{
-                overflow-y: auto;
-                &::-webkit-scrollbar {
-                    width: 4px;
-                    height: 4px;
-                }
-                &::-webkit-scrollbar-track {
+
+        &:hover {
+            overflow-y: auto;
+
+            &::-webkit-scrollbar {
+                width: 4px;
+                height: 4px;
+            }
+
+            &::-webkit-scrollbar-track {
                 box-shadow: inset 0 0 4px #D9D9D9;
-                }
-                &::-webkit-scrollbar-thumb {
+            }
+
+            &::-webkit-scrollbar-thumb {
                 background-color: #77c5eb !important;
                 outline: 1px solid #fff1f1;
-                }
             }
+        }
     }
+
     .nav {
         flex-direction: column;
+
         .nav-link {
             color: white;
             font-weight: 500;
             font-size: 15px;
             display: flex;
-            padding:15px;
+            padding: 15px;
             padding-right: 0;
             border-radius: 25px;
             margin-bottom: 20px;
             transition: padding 0.3s ease-in-out;
             align-items: center;
-            @media ($sm-1679){
+
+            @media ($sm-1679) {
                 margin-bottom: 15px;
             }
-            @media ($sm-1441){
+
+            @media ($sm-1441) {
                 margin-bottom: 10px;
             }
+
             .icon {
                 width: 20px;
                 height: 20px;
                 flex-shrink: 0;
                 margin-right: 19px;
-                @media ($sm-1679){
+
+                @media ($sm-1679) {
                     width: 18px;
                     height: 18px;
                 }
-                img{
+
+                img {
                     max-width: 100%;
                     display: block;
                 }
             }
-            .txt{
+
+            .txt {
                 white-space: nowrap;
                 line-height: 1;
             }
 
             &.active,
-            &:hover{
+            &:hover {
                 background: linear-gradient(90deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
             }
-            &.is-sub-menu{
+
+            &.is-sub-menu {
                 position: relative;
-                &::after{
-                content: "";
-                display: inline-block;
-                background: url(../images/chevron-down-arrow.svg) no-repeat center;
-                background-size: contain;
-                filter: brightness(0) invert(1) hue-rotate(68deg);
-                width: 12px;
-                height: 10px;
-                margin-left: 10px;
+
+                &::after {
+                    content: "";
+                    display: inline-block;
+                    // background: url(../images/chevron-down-arrow.svg) no-repeat center;
+                    background-size: contain;
+                    filter: brightness(0) invert(1) hue-rotate(68deg);
+                    width: 12px;
+                    height: 10px;
+                    margin-left: 10px;
                 }
-                &.open{
-                    &::after{
-                    transform: rotate(180deg);
+
+                &.open {
+                    &::after {
+                        transform: rotate(180deg);
                     }
                 }
             }
         }
-        .sub-menu{
+
+        .sub-menu {
             margin-left: 10px;
-            .nav-link{
+
+            .nav-link {
                 padding-right: 0px;
-                .icon{
+
+                .icon {
                     margin-right: 10px;
                 }
             }
         }
     }
+
     &.collapsed {
         width: 80px;
         max-width: 80px;
         flex: 0 0 80px;
-        .logo{
+
+        .logo {
             height: 48px;
+
             img {
                 width: 50px;
-                &.logo-collapse{
+
+                &.logo-collapse {
                     display: block;
                     height: 48px;
                 }
-                &:not(.logo-collapse){
+
+                &:not(.logo-collapse) {
                     display: none;
                 }
             }
         }
+
         .txt {
             display: none;
         }
 
-        .open-nav{
+        .open-nav {
             display: none;
         }
-        .close-nav{
+
+        .close-nav {
             display: block;
         }
-        .nav-link{
-            .icon{
+
+        .nav-link {
+            .icon {
                 margin-right: 0px;
             }
-            &.is-sub-menu{
+
+            &.is-sub-menu {
                 width: 9px;
                 height: 9px;
             }
         }
     }
+}
+
+.arrow {
+    margin-left: auto;
+    transition: transform 0.25s ease;
+    font-size: 14px;
+}
+
+.arrow.rotate {
+    transform: rotate(90deg);
 }
